# UniVAD

./: .gitignore  .gitmodules  README.md  UniVAD.py  main.py  modules.py  pyproject.toml  requirements.txt  segment_components.py  segment_components_madsim.py  test.sh  test_univad.py  test_univad_no_pixel.py
configs/class_histogram/: BrainMRI.yaml  ChestXray.yaml  HIS.yaml  LiverCT.yaml  RESC.yaml  bottle.yaml  breakfast_box.yaml  cable.yaml  candle.yaml  capsules.yaml  carpet.yaml  cashew.yaml  chewinggum.yaml  fryum.yaml  grid.yaml  hazelnut.yaml  juice_bottle.yaml  leather.yaml  macaroni2.yaml  metal_nut.yaml  pcb1.yaml  pill.yaml  pipe_fryum.yaml  pushpins.yaml  screw.yaml  screw_bag.yaml  splicing_connectors.yaml  tile.yaml  toothbrush.yaml  transistor.yaml  wood.yaml  zipper.yaml
data/: madsim_solver.py  mvtec_loco_solver.py  mvtec_solver.py  visa_solver.py
datasets/: brainmri.py  chestxray.py  his.py  liverct.py  madsim.py  mvtec.py  mvtec_loco.py  oct17.py  resc.py  visa.py
models/: clip_prompt.py  component_feature_extractor.py  component_segmentaion.py  decoder.py  grounded_sam.py
models/clip/: transformer.py
utils/: aug.py  utils_area.py
